--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "e-commerce-rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node app.js",
     "devStart": "nodemon app.js"
   },
   "author": "Brandon Smith",
